--- a/src/main.css
+++ b/src/main.css
@@ -86,6 +86,8 @@ main {
 
     font-size: 20px;
     font-weight: 550;
+
+    box-shadow: 0 4px 6px #f5d0a6bd;
 }
 
 #newItemBtn:hover {
@@ -106,6 +108,7 @@ main {
 .todoItem {
     padding: 8px 5px 5px 5px;
     border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(139, 139, 139, 0.25);
 }
 
 .todoItem_title {
