--- a/src/init.css
+++ b/src/init.css
@@ -31,3 +31,26 @@ button {
 h1 {
     font-size: 1.8rem;
 }
+
+input:focus, textarea:focus {
+    outline: none;
+}
+
+textarea, input {
+    border: none;
+}
+
+textarea {
+    min-height: 6rem;
+    background-color: rgba(58, 58, 58, 0.164);
+}
+
+input::placeholder, textarea::placeholder {
+    color: inherit;
+}
+
+textarea::placeholder {
+    padding: 3px;
+    position: absolute;
+    bottom: 0;
+}
