--- a/src/main.css
+++ b/src/main.css
@@ -140,6 +140,61 @@ main {
     background-color: #FFD8A9;
 }
 
+dialog * {
+    font-family: inherit;
+    font-size: medium;
+}
+
+dialog input {
+    background-color: transparent;
+    border-bottom: 2px solid rgb(95, 95, 95);
+}
+
+.createTodoItemDialog {
+    background-color: rgba(88, 88, 88, 0.507);
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+}
+
+.createTodoItemDialog>form {
+    box-shadow: 1px 3px 10px rgba(49, 49, 49, 0.452);
+    resize: both;
+    overflow: hidden;
+
+    border-radius: 8px;
+    background-color: #dfbc95;
+    
+    width: min(98%, 40rem);
+    padding: 14px;
+}
+
+.newTodoFormTitle {
+    display: block;
+    text-align: center;
+    font-weight: bold;
+}
+
+.formInputFields {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    color: #353535;
+    margin-bottom: 10px;
+}
+
+form > button {
+    border-radius: 8px;
+    width: 100%;
+    height: 2rem;
+    background-color: lightgreen;
+}
+
 @media screen and (max-width: 700px) {
     .sidebarClosed {
         grid-template-columns: 1fr;
